--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graceful-shutdown",
+  "name": "express-graceful-shutdown",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@git.zooz.co:providers-middleware/graceful-shutdown.git"
+    "url": "https://github.com/kobik/express-graceful-shutdown.git"
   },
   "keywords": [
     "graceful",
