All done. before code review

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- --recursive --reporter mochawesome ./tests/*-test.js && istanbul check-coverage --lines 95"
   },
   "repository": {
     "type": "git",
@@ -23,9 +23,16 @@
     "eslint-plugin-mocha": "^4.10.1",
     "eslint-plugin-node": "^5.0.0",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.4.2",
+    "mochawesome": "^2.3.0",
+    "mock-express": "^1.2.0",
+    "should": "^11.2.1",
+    "sinon": "^2.3.6"
   },
   "dependencies": {
-    "http-shutdown": "^1.2.0"
+    "http-shutdown": "^1.2.0",
+    "lodash": "^4.17.4"
   }
 }
